[gd_scene load_steps=2 format=3 uid="uid://lwunch5mrthh"]

[ext_resource type="Script" path="res://Title Page/Tile_Page.gd" id="1_de3rd"]

[node name="TilePage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_de3rd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.372549, 0.498039, 0.529412, 1)

[node name="play button" type="Button" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 706.0
offset_right = 1020.0
offset_bottom = 756.0
text = "Play"

[node name="options button" type="Button" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 770.0
offset_right = 1020.0
offset_bottom = 820.0
text = "Options"

[node name="quit button" type="Button" parent="."]
layout_mode = 0
offset_left = 920.0
offset_top = 836.0
offset_right = 1020.0
offset_bottom = 886.0
text = "Quit"

[node name="Temporary Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 917.0
offset_top = 585.0
offset_right = 1018.0
offset_bottom = 638.0
text = "ASTROTRIP"

[connection signal="pressed" from="play button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="options button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="quit button" to="." method="_on_quit_button_pressed"]
